--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
        
         <div class="row">
           <div class="col-lg-8 mb-5" id="contact">
-            <form action="http://localhost:4000/contact-me" method="post">
+            <form action="https://backendnodejsnpm.herokuapp.com/" method="post">
               <div class="form-group row">
                 <div class="col-md-6 mb-4 mb-lg-0">
                   <input name="firstName" type="text" class="form-control" placeholder="First name">
